background and fonts
1. Added custom fonts
2. Background wallpaper with blur
3. Global styles w/ reusable components

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZeroTab</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="global.css" />
     <script type="module" src="index.js"></script>
   </head>
   <body>
-    <h1>ZeroTab</h1>
+    <div class="bg">
+      <img
+        src="../assets/light-bg.png"
+        alt="Light Background"
+        class="light-bg"
+        width="1920"
+        height="1080"
+      />
+      <img
+        src="../assets/blur.png"
+        alt="Blur"
+        class="blur"
+        width="1920"
+        height="1080"
+      />
+    </div>
+    <main>
+      <h1 class="heading">ZeroTab</h1>
+    </main>
   </body>
 </html>
