created design system
1. Added global styles for reusable components
2. Styles for fonts, spacers, radius, and texts
3. Added icons

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <img
         src="../assets/light-bg.png"
         alt="Light Background"
-        class="light-bg"
+        class="wallpaper"
         width="1920"
         height="1080"
       />
@@ -26,7 +26,11 @@
       />
     </div>
     <main>
-      <h1 class="heading">ZeroTab</h1>
+      <div class="holder">
+        <div class="input-div">
+          <img src="../assets/logo.png" alt="ZeroTab" width="28" height="28" />
+        </div>
+      </div>
     </main>
   </body>
 </html>
