code refactoring w/ jsDocs and notes

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
             id="search-input"
             type="text"
             placeholder="Type a command or search"
+            autocomplete="off"
           />
           <button class="icon body2 radius1" id="settings">&#xeb51;</button>
         </div>
